--- a/index.html
+++ b/index.html
@@ -81,37 +81,37 @@
         </div>
       </div>
 <!--CARD LINKS-->
-    <div class="container">
-     <div class="row">
-      <div class="col-lg-4 col-sm-12">
-        <div class="card border-0 mx-auto" style="width: 18rem;">
-          <a href="/jam.html" ><img class="card-img-top" src="pics/darkjamjars.jpeg" onmouseover="showIngredients(this, 'pics/jamjars.jpeg')"
-          onmouseout="hideIngredients(this, 'pics/darkjamjars.jpeg')" alt="jamjars" height="350px"></a>
-          <div class="card-body mx-auto">
-            <h5 class="card-title">Jam & Chutney</h5>
-        </div>
+<div class="container">
+ <div class="row">
+  <div class="col-lg-4 col-sm-12">
+    <div class="card border-0 mx-auto" style="width: 18rem;">
+      <a href="/jam.html" ><img class="card-img-top" src="pics/jamjars.jpeg" onmouseover="showIngredients(this, 'pics/darkjamjars.jpeg')"
+      onmouseout="hideIngredients(this, 'pics/jamjars.jpeg')" alt="jamjars" height="350px"></a>
+      <div class="card-body mx-auto">
+        <h5 class="card-title">Jam & Chutney</h5>
+    </div>
+  </div>
+</div>
+  <div class="col-lg-4 col-sm-12">
+    <div class="card border-0 mx-auto" style="width: 18rem;">
+      <a href="/bakery.html"><img class="card-img-top" src="pics/minicakes.jpeg" onmouseover="showIngredients(this, 'pics/darkminicakes.jpeg')"
+      onmouseout="hideIngredients(this, 'pics/minicakes.jpeg')" alt="cakes" height="350px"></a>
+      <div class="card-body mx-auto">
+        <h5 class="card-title">Festive Bakery</h5>
       </div>
     </div>
-      <div class="col-lg-4 col-sm-12">
-        <div class="card border-0 mx-auto" style="width: 18rem;">
-          <a href="/bakery.html"><img class="card-img-top" src="pics/darkminicakes.jpeg" onmouseover="showIngredients(this, 'pics/minicakes.jpeg')"
-          onmouseout="hideIngredients(this, 'pics/darkminicakes.jpeg')" alt="cakes" height="350px"></a>
-          <div class="card-body mx-auto">
-            <h5 class="card-title">Festive Bakery</h5>
-          </div>
-        </div>
+  </div>
+  <div class="col-lg-4 col-sm-12">
+    <div class="card border-0 mx-auto" style="width: 18rem;">
+      <a href="/contact.html"><img class="card-img-top" src="pics/ps-stand.jpg" onmouseover="showIngredients(this, 'pics/darkps-stand.jpg')"
+      onmouseout="hideIngredients(this, 'pics/ps-stand.jpg')" alt="stand" height="350px"></a>
+      <div class="card-body mx-auto">
+        <h5 class="card-title">Contact</h5>
       </div>
-      <div class="col-lg-4 col-sm-12">
-        <div class="card border-0 mx-auto" style="width: 18rem;">
-          <a href="/contact.html"><img class="card-img-top" src="pics/darkps-stand.jpg" onmouseover="showIngredients(this, 'pics/ps-stand.jpg')"
-          onmouseout="hideIngredients(this, 'pics/darkps-stand.jpg')" alt="stand" height="350px"></a>
-          <div class="card-body mx-auto">
-            <h5 class="card-title">Contact</h5>
-          </div>
-        </div>
-      </div>
-     </div>
     </div>
+  </div>
+ </div>
+</div>
 
 <!--REVIEWS CAROUSEL-->
     <div class="container col-5">
